Fix layout issues  on smallest screens.
Add margin to bottom of footer to prevent the scroll icon from blocking credits.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -220,6 +220,7 @@ h6 {
 --------------------------------------------------------------*/
 /* Desktop Navigation */
 @media (min-width: 1200px) {
+  
   .navmenu {
     padding: 0;
   }
@@ -370,6 +371,15 @@ h6 {
     cursor: pointer;
     transition: color 0.3s;
   }
+
+
+  @media (max-width: 424px){
+    .sitename {
+    content-visibility: hidden;
+  }
+  } 
+  
+  
   
   .navmenu {
     padding: 0;
@@ -498,6 +508,7 @@ h6 {
   background-color: var(--background-color);
   font-size: 14px;
   padding: 40px 0;
+  margin: 20px 0;
   position: relative;
 }
 
